WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191963
[css-grid] align-self center and position sticky don't work together
https://bugs.webkit.org/show_bug.cgi?id=191963
Summary
[css-grid] align-self center and position sticky don't work together
Javier Fernandez
Reported
2018-11-26 03:28:51 PST
Created
attachment 355631
[details]
Test case to reproduce the issue What steps will reproduce the problem? (1) load the attached testcase (2) (3) What is the expected result? Text that says "I should be centered" should be vertically and horizontally centered in its gray container. What happens instead? The text is horizontally centered, but not vertically centered. It gets rendered at the top of the container.
Attachments
Test case to reproduce the issue
(594 bytes, text/html)
2018-11-26 03:28 PST
,
Javier Fernandez
no flags
Details
Patch
(14.00 KB, patch)
2018-11-26 03:41 PST
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Patch
(14.05 KB, patch)
2018-11-27 05:08 PST
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2018-11-26 03:41:22 PST
Created
attachment 355632
[details]
Patch
Manuel Rego Casasnovas
Comment 2
2018-11-27 02:03:39 PST
Comment on
attachment 355632
[details]
Patch Thanks, LGTM!
WebKit Commit Bot
Comment 3
2018-11-27 02:30:38 PST
Comment on
attachment 355632
[details]
Patch Rejecting
attachment 355632
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 355632, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=355632&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=191963
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 355632 from
bug 191963
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=355632
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/imported/w3c/ChangeLog M LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-column-axis-alignment-sticky-positioned-items-001-expected.txt M LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-column-axis-alignment-sticky-positioned-items-002-expected.txt M LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-row-axis-alignment-sticky-positioned-items-001-expected.txt M LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-row-axis-alignment-sticky-positioned-items-002-expected.txt M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: fd6691a09a44b18cc3a9f226a17fae20ff84cb4e and refs/remotes/origin/master differ, using rebase: :040000 040000 c366c5351c006a2c2d56feaccc40eaf0bb6f13bb 3439452ff9ecb7a1215ab1c52b3752481824652a M LayoutTests :040000 040000 96ecebf8d390f6cfbc9ea6174ae4830e15957db4 bfc2fa26c7b37ea3520ffa0f235d1a7be3453b52 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/imported/w3c/ChangeLog M LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-column-axis-alignment-sticky-positioned-items-001-expected.txt M LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-column-axis-alignment-sticky-positioned-items-002-expected.txt M LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-row-axis-alignment-sticky-positioned-items-001-expected.txt M LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-row-axis-alignment-sticky-positioned-items-002-expected.txt M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: fd6691a09a44b18cc3a9f226a17fae20ff84cb4e and refs/remotes/origin/master differ, using rebase: :040000 040000 c366c5351c006a2c2d56feaccc40eaf0bb6f13bb 3439452ff9ecb7a1215ab1c52b3752481824652a M LayoutTests :040000 040000 96ecebf8d390f6cfbc9ea6174ae4830e15957db4 bfc2fa26c7b37ea3520ffa0f235d1a7be3453b52 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
https://webkit-queues.webkit.org/results/10164608
Javier Fernandez
Comment 4
2018-11-27 05:08:34 PST
Created
attachment 355723
[details]
Patch
WebKit Commit Bot
Comment 5
2018-11-27 05:53:04 PST
Comment on
attachment 355723
[details]
Patch Clearing flags on attachment: 355723 Committed
r238551
: <
https://trac.webkit.org/changeset/238551
>
WebKit Commit Bot
Comment 6
2018-11-27 05:53:06 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-11-27 05:54:32 PST
<
rdar://problem/46274232
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug